--- a/src/mobiles/Makefile-depend
+++ b/src/mobiles/Makefile-depend
@@ -1,19 +1,191 @@
-$(OBJ)/artisan.o : artisan.cc \
-	$(INCLUDE)/db.h $(INCLUDE)/structs.h $(INCLUDE)/xml_utils.h $(INCLUDE)/utils.h $(INCLUDE)/interpreter.h $(INCLUDE)/actions.h $(INCLUDE)/char_class.h $(INCLUDE)/comm.h $(INCLUDE)/tmpstr.h $(INCLUDE)/screen.h $(INCLUDE)/handler.h $(INCLUDE)/security.h $(INCLUDE)/vendor.h 
-	$(CXX) -c $(CXXFLAGS) artisan.cc           -o $(OBJ)/artisan.o
-$(OBJ)/cityguard.o : cityguard.cc \
-	$(INCLUDE)/creature.h $(INCLUDE)/house.h $(INCLUDE)/actions.h $(INCLUDE)/db.h $(INCLUDE)/comm.h $(INCLUDE)/fight.h $(INCLUDE)/handler.h $(INCLUDE)/interpreter.h $(INCLUDE)/tmpstr.h $(INCLUDE)/screen.h $(INCLUDE)/utils.h $(INCLUDE)/specs.h 
-	$(CXX) -c $(CXXFLAGS) cityguard.cc         -o $(OBJ)/cityguard.o
-$(OBJ)/guard.o : guard.cc \
-	$(INCLUDE)/actions.h $(INCLUDE)/db.h $(INCLUDE)/comm.h $(INCLUDE)/fight.h $(INCLUDE)/handler.h $(INCLUDE)/interpreter.h $(INCLUDE)/tmpstr.h $(INCLUDE)/screen.h $(INCLUDE)/utils.h 
-	$(CXX) -c $(CXXFLAGS) guard.cc             -o $(OBJ)/guard.o
-$(OBJ)/mail.o : mail.cc \
-	$(INCLUDE)/actions.h $(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/db.h $(INCLUDE)/interpreter.h $(INCLUDE)/handler.h $(INCLUDE)/mail.h $(INCLUDE)/editor.h $(INCLUDE)/screen.h $(INCLUDE)/clan.h $(INCLUDE)/materials.h $(INCLUDE)/player_table.h $(INCLUDE)/accstr.h 
-	$(CXX) -c $(CXXFLAGS) mail.cc              -o $(OBJ)/mail.o
-$(OBJ)/mobact.o : mobact.cc \
-	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/db.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/handler.h $(INCLUDE)/spells.h $(INCLUDE)/char_class.h $(INCLUDE)/vehicle.h $(INCLUDE)/flow_room.h $(INCLUDE)/guns.h $(INCLUDE)/bomb.h $(INCLUDE)/mobact.h $(INCLUDE)/fight.h $(INCLUDE)/actions.h $(INCLUDE)/creature.h $(INCLUDE)/screen.h $(INCLUDE)/tmpstr.h $(INCLUDE)/prog.h $(INCLUDE)/specs.h 
-	$(CXX) -c $(CXXFLAGS) mobact.cc            -o $(OBJ)/mobact.o
-$(OBJ)/vendor.o : vendor.cc \
-	$(INCLUDE)/actions.h $(INCLUDE)/db.h $(INCLUDE)/comm.h $(INCLUDE)/handler.h $(INCLUDE)/interpreter.h $(INCLUDE)/tmpstr.h $(INCLUDE)/screen.h $(INCLUDE)/weather.h $(INCLUDE)/utils.h $(INCLUDE)/vendor.h $(INCLUDE)/specs.h 
-	$(CXX) -c $(CXXFLAGS) vendor.cc            -o $(OBJ)/vendor.o
+$(OBJ)/artisan.o: artisan.cc ../include/db.h ../include/defs.h \
+  ../include/creature.h ../include/combat_data_list.h \
+  ../include/safe_list.h ../include/structs.h ../include/macros.h \
+  ../include/constants.h ../include/obj_data.h ../include/xml_utils.h \
+  /usr/include/libxml2/libxml/parser.h \
+  /usr/include/libxml2/libxml/xmlversion.h \
+  /usr/include/libxml2/libxml/xmlexports.h \
+  /usr/include/libxml2/libxml/tree.h \
+  /usr/include/libxml2/libxml/xmlstring.h \
+  /usr/include/libxml2/libxml/xmlregexp.h \
+  /usr/include/libxml2/libxml/dict.h /usr/include/libxml2/libxml/hash.h \
+  /usr/include/libxml2/libxml/valid.h \
+  /usr/include/libxml2/libxml/xmlerror.h \
+  /usr/include/libxml2/libxml/list.h \
+  /usr/include/libxml2/libxml/xmlautomata.h \
+  /usr/include/libxml2/libxml/entities.h \
+  /usr/include/libxml2/libxml/encoding.h \
+  /usr/include/libxml2/libxml/xmlIO.h \
+  /usr/include/libxml2/libxml/globals.h /usr/include/libxml2/libxml/SAX.h \
+  /usr/include/libxml2/libxml/xlink.h /usr/include/libxml2/libxml/SAX2.h \
+  /usr/include/libxml2/libxml/xmlmemory.h \
+  /usr/include/libxml2/libxml/threads.h ../include/tmpstr.h \
+  ../include/creature_list.h ../include/desc_data.h \
+  ../include/room_data.h ../include/search.h ../include/weather.h \
+  ../include/zone_data.h ../include/ban.h ../include/account.h \
+  ../include/interpreter.h /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/utils.h \
+  ../include/actions.h ../include/spells.h ../include/char_class.h \
+  ../include/mobact.h ../include/comm.h ../include/screen.h \
+  ../include/handler.h ../include/security.h ../include/vendor.h
+	$(CXX) $(CXXFLAGS) -o $@ -c $<
+$(OBJ)/cityguard.o: cityguard.cc ../include/creature.h \
+  ../include/combat_data_list.h ../include/safe_list.h \
+  ../include/structs.h ../include/defs.h ../include/macros.h \
+  ../include/constants.h ../include/obj_data.h ../include/xml_utils.h \
+  /usr/include/libxml2/libxml/parser.h \
+  /usr/include/libxml2/libxml/xmlversion.h \
+  /usr/include/libxml2/libxml/xmlexports.h \
+  /usr/include/libxml2/libxml/tree.h \
+  /usr/include/libxml2/libxml/xmlstring.h \
+  /usr/include/libxml2/libxml/xmlregexp.h \
+  /usr/include/libxml2/libxml/dict.h /usr/include/libxml2/libxml/hash.h \
+  /usr/include/libxml2/libxml/valid.h \
+  /usr/include/libxml2/libxml/xmlerror.h \
+  /usr/include/libxml2/libxml/list.h \
+  /usr/include/libxml2/libxml/xmlautomata.h \
+  /usr/include/libxml2/libxml/entities.h \
+  /usr/include/libxml2/libxml/encoding.h \
+  /usr/include/libxml2/libxml/xmlIO.h \
+  /usr/include/libxml2/libxml/globals.h /usr/include/libxml2/libxml/SAX.h \
+  /usr/include/libxml2/libxml/xlink.h /usr/include/libxml2/libxml/SAX2.h \
+  /usr/include/libxml2/libxml/xmlmemory.h \
+  /usr/include/libxml2/libxml/threads.h ../include/tmpstr.h \
+  ../include/creature_list.h ../include/desc_data.h \
+  ../include/room_data.h ../include/search.h ../include/weather.h \
+  ../include/zone_data.h ../include/ban.h ../include/account.h \
+  ../include/interpreter.h ../include/house.h ../include/actions.h \
+  ../include/spells.h ../include/db.h /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/comm.h \
+  ../include/fight.h ../include/handler.h ../include/utils.h \
+  ../include/screen.h ../include/specs.h
+	$(CXX) $(CXXFLAGS) -o $@ -c $<
+$(OBJ)/guard.o: guard.cc ../include/actions.h ../include/interpreter.h \
+  ../include/defs.h ../include/spells.h ../include/creature.h \
+  ../include/combat_data_list.h ../include/safe_list.h \
+  ../include/structs.h ../include/macros.h ../include/constants.h \
+  ../include/obj_data.h ../include/xml_utils.h \
+  /usr/include/libxml2/libxml/parser.h \
+  /usr/include/libxml2/libxml/xmlversion.h \
+  /usr/include/libxml2/libxml/xmlexports.h \
+  /usr/include/libxml2/libxml/tree.h \
+  /usr/include/libxml2/libxml/xmlstring.h \
+  /usr/include/libxml2/libxml/xmlregexp.h \
+  /usr/include/libxml2/libxml/dict.h /usr/include/libxml2/libxml/hash.h \
+  /usr/include/libxml2/libxml/valid.h \
+  /usr/include/libxml2/libxml/xmlerror.h \
+  /usr/include/libxml2/libxml/list.h \
+  /usr/include/libxml2/libxml/xmlautomata.h \
+  /usr/include/libxml2/libxml/entities.h \
+  /usr/include/libxml2/libxml/encoding.h \
+  /usr/include/libxml2/libxml/xmlIO.h \
+  /usr/include/libxml2/libxml/globals.h /usr/include/libxml2/libxml/SAX.h \
+  /usr/include/libxml2/libxml/xlink.h /usr/include/libxml2/libxml/SAX2.h \
+  /usr/include/libxml2/libxml/xmlmemory.h \
+  /usr/include/libxml2/libxml/threads.h ../include/tmpstr.h \
+  ../include/creature_list.h ../include/desc_data.h \
+  ../include/room_data.h ../include/search.h ../include/weather.h \
+  ../include/zone_data.h ../include/ban.h ../include/account.h \
+  ../include/db.h /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/comm.h \
+  ../include/fight.h ../include/handler.h ../include/utils.h \
+  ../include/screen.h
+	$(CXX) $(CXXFLAGS) -o $@ -c $<
+$(OBJ)/mail.o: mail.cc ../include/actions.h ../include/interpreter.h \
+  ../include/defs.h ../include/spells.h ../include/creature.h \
+  ../include/combat_data_list.h ../include/safe_list.h \
+  ../include/structs.h ../include/macros.h ../include/constants.h \
+  ../include/obj_data.h ../include/xml_utils.h \
+  /usr/include/libxml2/libxml/parser.h \
+  /usr/include/libxml2/libxml/xmlversion.h \
+  /usr/include/libxml2/libxml/xmlexports.h \
+  /usr/include/libxml2/libxml/tree.h \
+  /usr/include/libxml2/libxml/xmlstring.h \
+  /usr/include/libxml2/libxml/xmlregexp.h \
+  /usr/include/libxml2/libxml/dict.h /usr/include/libxml2/libxml/hash.h \
+  /usr/include/libxml2/libxml/valid.h \
+  /usr/include/libxml2/libxml/xmlerror.h \
+  /usr/include/libxml2/libxml/list.h \
+  /usr/include/libxml2/libxml/xmlautomata.h \
+  /usr/include/libxml2/libxml/entities.h \
+  /usr/include/libxml2/libxml/encoding.h \
+  /usr/include/libxml2/libxml/xmlIO.h \
+  /usr/include/libxml2/libxml/globals.h /usr/include/libxml2/libxml/SAX.h \
+  /usr/include/libxml2/libxml/xlink.h /usr/include/libxml2/libxml/SAX2.h \
+  /usr/include/libxml2/libxml/xmlmemory.h \
+  /usr/include/libxml2/libxml/threads.h ../include/tmpstr.h \
+  ../include/creature_list.h ../include/desc_data.h \
+  ../include/room_data.h ../include/search.h ../include/weather.h \
+  ../include/zone_data.h ../include/ban.h ../include/account.h \
+  ../include/utils.h ../include/comm.h ../include/db.h \
+  /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/handler.h \
+  ../include/mail.h ../include/editor.h ../include/prog.h \
+  ../include/screen.h ../include/clan.h ../include/materials.h \
+  ../include/player_table.h ../include/accstr.h
+	$(CXX) $(CXXFLAGS) -o $@ -c $<
+$(OBJ)/mobact.o: mobact.cc ../include/structs.h ../include/defs.h \
+  ../include/macros.h ../include/constants.h ../include/obj_data.h \
+  ../include/xml_utils.h /usr/include/libxml2/libxml/parser.h \
+  /usr/include/libxml2/libxml/xmlversion.h \
+  /usr/include/libxml2/libxml/xmlexports.h \
+  /usr/include/libxml2/libxml/tree.h \
+  /usr/include/libxml2/libxml/xmlstring.h \
+  /usr/include/libxml2/libxml/xmlregexp.h \
+  /usr/include/libxml2/libxml/dict.h /usr/include/libxml2/libxml/hash.h \
+  /usr/include/libxml2/libxml/valid.h \
+  /usr/include/libxml2/libxml/xmlerror.h \
+  /usr/include/libxml2/libxml/list.h \
+  /usr/include/libxml2/libxml/xmlautomata.h \
+  /usr/include/libxml2/libxml/entities.h \
+  /usr/include/libxml2/libxml/encoding.h \
+  /usr/include/libxml2/libxml/xmlIO.h \
+  /usr/include/libxml2/libxml/globals.h /usr/include/libxml2/libxml/SAX.h \
+  /usr/include/libxml2/libxml/xlink.h /usr/include/libxml2/libxml/SAX2.h \
+  /usr/include/libxml2/libxml/xmlmemory.h \
+  /usr/include/libxml2/libxml/threads.h ../include/tmpstr.h \
+  ../include/creature_list.h ../include/creature.h \
+  ../include/combat_data_list.h ../include/safe_list.h \
+  ../include/account.h ../include/desc_data.h ../include/interpreter.h \
+  ../include/room_data.h ../include/search.h ../include/weather.h \
+  ../include/zone_data.h ../include/ban.h ../include/utils.h \
+  ../include/db.h /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/comm.h \
+  ../include/handler.h ../include/spells.h ../include/char_class.h \
+  ../include/actions.h ../include/mobact.h ../include/vehicle.h \
+  ../include/flow_room.h ../include/guns.h ../include/bomb.h \
+  ../include/fight.h ../include/screen.h ../include/prog.h \
+  ../include/specs.h
+	$(CXX) $(CXXFLAGS) -o $@ -c $<
+$(OBJ)/vendor.o: vendor.cc ../include/actions.h ../include/interpreter.h \
+  ../include/defs.h ../include/spells.h ../include/creature.h \
+  ../include/combat_data_list.h ../include/safe_list.h \
+  ../include/structs.h ../include/macros.h ../include/constants.h \
+  ../include/obj_data.h ../include/xml_utils.h \
+  /usr/include/libxml2/libxml/parser.h \
+  /usr/include/libxml2/libxml/xmlversion.h \
+  /usr/include/libxml2/libxml/xmlexports.h \
+  /usr/include/libxml2/libxml/tree.h \
+  /usr/include/libxml2/libxml/xmlstring.h \
+  /usr/include/libxml2/libxml/xmlregexp.h \
+  /usr/include/libxml2/libxml/dict.h /usr/include/libxml2/libxml/hash.h \
+  /usr/include/libxml2/libxml/valid.h \
+  /usr/include/libxml2/libxml/xmlerror.h \
+  /usr/include/libxml2/libxml/list.h \
+  /usr/include/libxml2/libxml/xmlautomata.h \
+  /usr/include/libxml2/libxml/entities.h \
+  /usr/include/libxml2/libxml/encoding.h \
+  /usr/include/libxml2/libxml/xmlIO.h \
+  /usr/include/libxml2/libxml/globals.h /usr/include/libxml2/libxml/SAX.h \
+  /usr/include/libxml2/libxml/xlink.h /usr/include/libxml2/libxml/SAX2.h \
+  /usr/include/libxml2/libxml/xmlmemory.h \
+  /usr/include/libxml2/libxml/threads.h ../include/tmpstr.h \
+  ../include/creature_list.h ../include/desc_data.h \
+  ../include/room_data.h ../include/search.h ../include/weather.h \
+  ../include/zone_data.h ../include/ban.h ../include/account.h \
+  ../include/db.h /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/comm.h \
+  ../include/handler.h ../include/screen.h ../include/utils.h \
+  ../include/vendor.h ../include/specs.h
+	$(CXX) $(CXXFLAGS) -o $@ -c $<
 OBJFILES= $(OBJ)/artisan.o $(OBJ)/cityguard.o $(OBJ)/guard.o $(OBJ)/mail.o $(OBJ)/mobact.o $(OBJ)/vendor.o
