--- a/src/quest/Makefile-depend
+++ b/src/quest/Makefile-depend
@@ -23,10 +23,9 @@ $(OBJ)/quest.o: quest.cc /usr/include/libxml2/libxml/parser.h \
   ../include/account.h ../include/desc_data.h ../include/interpreter.h \
   ../include/room_data.h ../include/search.h ../include/weather.h \
   ../include/zone_data.h ../include/ban.h ../include/comm.h \
-  ../include/utils.h ../include/db.h /usr/local/pgsql/include/libpq-fe.h \
-  /usr/local/pgsql/include/postgres_ext.h ../include/editor.h \
-  ../include/prog.h ../include/spells.h ../include/quest.h \
-  ../include/player_table.h ../include/handler.h ../include/screen.h \
-  ../include/security.h
+  ../include/utils.h ../include/db.h /usr/include/pgsql/libpq-fe.h \
+  /usr/include/pgsql/postgres_ext.h ../include/editor.h ../include/prog.h \
+  ../include/spells.h ../include/quest.h ../include/player_table.h \
+  ../include/handler.h ../include/screen.h ../include/security.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 OBJFILES= $(OBJ)/quest.o
