--- a/src/editor/Makefile-depend
+++ b/src/editor/Makefile-depend
@@ -24,11 +24,10 @@ $(OBJ)/boardeditor.o: boardeditor.cc ../include/screen.h ../include/desc_data.h 
   ../include/creature_list.h ../include/room_data.h ../include/search.h \
   ../include/weather.h ../include/zone_data.h ../include/ban.h \
   ../include/account.h ../include/interpreter.h \
-  /usr/local/pgsql/include/libpq-fe.h \
-  /usr/local/pgsql/include/postgres_ext.h ../include/utils.h \
-  ../include/login.h ../include/boards.h ../include/mail.h \
-  ../include/editor.h ../include/prog.h ../include/accstr.h \
-  ../include/help.h ../include/player_table.h
+  /usr/include/pgsql/libpq-fe.h /usr/include/pgsql/postgres_ext.h \
+  ../include/utils.h ../include/login.h ../include/boards.h \
+  ../include/mail.h ../include/editor.h ../include/prog.h \
+  ../include/accstr.h ../include/help.h ../include/player_table.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/editor.o: editor.cc ../include/screen.h ../include/desc_data.h \
   ../include/defs.h ../include/constants.h ../include/comm.h \
@@ -56,11 +55,10 @@ $(OBJ)/editor.o: editor.cc ../include/screen.h ../include/desc_data.h \
   ../include/creature_list.h ../include/room_data.h ../include/search.h \
   ../include/weather.h ../include/zone_data.h ../include/ban.h \
   ../include/account.h ../include/interpreter.h \
-  /usr/local/pgsql/include/libpq-fe.h \
-  /usr/local/pgsql/include/postgres_ext.h ../include/utils.h \
-  ../include/login.h ../include/boards.h ../include/mail.h \
-  ../include/editor.h ../include/prog.h ../include/accstr.h \
-  ../include/help.h ../include/player_table.h
+  /usr/include/pgsql/libpq-fe.h /usr/include/pgsql/postgres_ext.h \
+  ../include/utils.h ../include/login.h ../include/boards.h \
+  ../include/mail.h ../include/editor.h ../include/prog.h \
+  ../include/accstr.h ../include/help.h ../include/player_table.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/fileeditor.o: fileeditor.cc ../include/screen.h ../include/desc_data.h \
   ../include/defs.h ../include/constants.h ../include/comm.h \
@@ -88,11 +86,10 @@ $(OBJ)/fileeditor.o: fileeditor.cc ../include/screen.h ../include/desc_data.h \
   ../include/creature_list.h ../include/room_data.h ../include/search.h \
   ../include/weather.h ../include/zone_data.h ../include/ban.h \
   ../include/account.h ../include/interpreter.h \
-  /usr/local/pgsql/include/libpq-fe.h \
-  /usr/local/pgsql/include/postgres_ext.h ../include/utils.h \
-  ../include/login.h ../include/boards.h ../include/mail.h \
-  ../include/editor.h ../include/prog.h ../include/accstr.h \
-  ../include/help.h ../include/player_table.h
+  /usr/include/pgsql/libpq-fe.h /usr/include/pgsql/postgres_ext.h \
+  ../include/utils.h ../include/login.h ../include/boards.h \
+  ../include/mail.h ../include/editor.h ../include/prog.h \
+  ../include/accstr.h ../include/help.h ../include/player_table.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/maileditor.o: maileditor.cc ../include/screen.h ../include/desc_data.h \
   ../include/defs.h ../include/constants.h ../include/comm.h \
@@ -120,11 +117,10 @@ $(OBJ)/maileditor.o: maileditor.cc ../include/screen.h ../include/desc_data.h \
   ../include/creature_list.h ../include/room_data.h ../include/search.h \
   ../include/weather.h ../include/zone_data.h ../include/ban.h \
   ../include/account.h ../include/interpreter.h \
-  /usr/local/pgsql/include/libpq-fe.h \
-  /usr/local/pgsql/include/postgres_ext.h ../include/utils.h \
-  ../include/login.h ../include/boards.h ../include/mail.h \
-  ../include/editor.h ../include/prog.h ../include/accstr.h \
-  ../include/help.h ../include/player_table.h
+  /usr/include/pgsql/libpq-fe.h /usr/include/pgsql/postgres_ext.h \
+  ../include/utils.h ../include/login.h ../include/boards.h \
+  ../include/mail.h ../include/editor.h ../include/prog.h \
+  ../include/accstr.h ../include/help.h ../include/player_table.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/polleditor.o: polleditor.cc ../include/screen.h ../include/desc_data.h \
   ../include/defs.h ../include/constants.h ../include/comm.h \
@@ -152,11 +148,10 @@ $(OBJ)/polleditor.o: polleditor.cc ../include/screen.h ../include/desc_data.h \
   ../include/creature_list.h ../include/room_data.h ../include/search.h \
   ../include/weather.h ../include/zone_data.h ../include/ban.h \
   ../include/account.h ../include/interpreter.h \
-  /usr/local/pgsql/include/libpq-fe.h \
-  /usr/local/pgsql/include/postgres_ext.h ../include/utils.h \
-  ../include/login.h ../include/boards.h ../include/mail.h \
-  ../include/editor.h ../include/prog.h ../include/accstr.h \
-  ../include/help.h ../include/player_table.h
+  /usr/include/pgsql/libpq-fe.h /usr/include/pgsql/postgres_ext.h \
+  ../include/utils.h ../include/login.h ../include/boards.h \
+  ../include/mail.h ../include/editor.h ../include/prog.h \
+  ../include/accstr.h ../include/help.h ../include/player_table.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/progeditor.o: progeditor.cc ../include/screen.h ../include/desc_data.h \
   ../include/defs.h ../include/constants.h ../include/comm.h \
@@ -184,11 +179,10 @@ $(OBJ)/progeditor.o: progeditor.cc ../include/screen.h ../include/desc_data.h \
   ../include/creature_list.h ../include/room_data.h ../include/search.h \
   ../include/weather.h ../include/zone_data.h ../include/ban.h \
   ../include/account.h ../include/interpreter.h \
-  /usr/local/pgsql/include/libpq-fe.h \
-  /usr/local/pgsql/include/postgres_ext.h ../include/utils.h \
-  ../include/login.h ../include/boards.h ../include/mail.h \
-  ../include/editor.h ../include/prog.h ../include/accstr.h \
-  ../include/help.h ../include/player_table.h
+  /usr/include/pgsql/libpq-fe.h /usr/include/pgsql/postgres_ext.h \
+  ../include/utils.h ../include/login.h ../include/boards.h \
+  ../include/mail.h ../include/editor.h ../include/prog.h \
+  ../include/accstr.h ../include/help.h ../include/player_table.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/texteditor.o: texteditor.cc ../include/screen.h ../include/desc_data.h \
   ../include/defs.h ../include/constants.h ../include/comm.h \
@@ -216,10 +210,9 @@ $(OBJ)/texteditor.o: texteditor.cc ../include/screen.h ../include/desc_data.h \
   ../include/creature_list.h ../include/room_data.h ../include/search.h \
   ../include/weather.h ../include/zone_data.h ../include/ban.h \
   ../include/account.h ../include/interpreter.h \
-  /usr/local/pgsql/include/libpq-fe.h \
-  /usr/local/pgsql/include/postgres_ext.h ../include/utils.h \
-  ../include/login.h ../include/boards.h ../include/mail.h \
-  ../include/editor.h ../include/prog.h ../include/accstr.h \
-  ../include/help.h ../include/player_table.h
+  /usr/include/pgsql/libpq-fe.h /usr/include/pgsql/postgres_ext.h \
+  ../include/utils.h ../include/login.h ../include/boards.h \
+  ../include/mail.h ../include/editor.h ../include/prog.h \
+  ../include/accstr.h ../include/help.h ../include/player_table.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 OBJFILES= $(OBJ)/boardeditor.o $(OBJ)/editor.o $(OBJ)/fileeditor.o $(OBJ)/maileditor.o $(OBJ)/polleditor.o $(OBJ)/progeditor.o $(OBJ)/texteditor.o
