--- a/src/classes/Makefile-depend
+++ b/src/classes/Makefile-depend
@@ -24,11 +24,12 @@ $(OBJ)/act.barb.o: act.barb.cc ../include/structs.h ../include/defs.h \
   ../include/room_data.h ../include/search.h ../include/weather.h \
   ../include/zone_data.h ../include/ban.h ../include/utils.h \
   ../include/comm.h ../include/handler.h ../include/db.h \
-  /usr/include/pgsql/libpq-fe.h /usr/include/pgsql/postgres_ext.h \
-  ../include/spells.h ../include/screen.h ../include/vehicle.h \
-  ../include/materials.h ../include/flow_room.h ../include/house.h \
-  ../include/char_class.h ../include/actions.h ../include/mobact.h \
-  ../include/bomb.h ../include/fight.h
+  /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/spells.h \
+  ../include/screen.h ../include/vehicle.h ../include/materials.h \
+  ../include/flow_room.h ../include/house.h ../include/char_class.h \
+  ../include/actions.h ../include/mobact.h ../include/bomb.h \
+  ../include/fight.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/act.bard.o: act.bard.cc ../include/structs.h ../include/defs.h \
   ../include/macros.h ../include/constants.h ../include/obj_data.h \
@@ -56,13 +57,13 @@ $(OBJ)/act.bard.o: act.bard.cc ../include/structs.h ../include/defs.h \
   ../include/room_data.h ../include/search.h ../include/weather.h \
   ../include/zone_data.h ../include/ban.h ../include/utils.h \
   ../include/comm.h ../include/handler.h ../include/db.h \
-  /usr/include/pgsql/libpq-fe.h /usr/include/pgsql/postgres_ext.h \
-  ../include/spells.h ../include/screen.h ../include/char_class.h \
-  ../include/actions.h ../include/mobact.h ../include/vehicle.h \
-  ../include/materials.h ../include/fight.h ../include/guns.h \
-  ../include/bomb.h ../include/house.h ../include/vendor.h \
-  ../include/security.h ../include/clan.h ../include/specs.h \
-  ../include/flow_room.h
+  /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/spells.h \
+  ../include/screen.h ../include/char_class.h ../include/actions.h \
+  ../include/mobact.h ../include/vehicle.h ../include/materials.h \
+  ../include/fight.h ../include/guns.h ../include/bomb.h \
+  ../include/house.h ../include/vendor.h ../include/security.h \
+  ../include/clan.h ../include/specs.h ../include/flow_room.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/act.cleric.o: act.cleric.cc ../include/structs.h ../include/defs.h \
   ../include/macros.h ../include/constants.h ../include/obj_data.h \
@@ -90,11 +91,11 @@ $(OBJ)/act.cleric.o: act.cleric.cc ../include/structs.h ../include/defs.h \
   ../include/room_data.h ../include/search.h ../include/weather.h \
   ../include/zone_data.h ../include/ban.h ../include/utils.h \
   ../include/comm.h ../include/handler.h ../include/db.h \
-  /usr/include/pgsql/libpq-fe.h /usr/include/pgsql/postgres_ext.h \
-  ../include/spells.h ../include/screen.h ../include/vehicle.h \
-  ../include/materials.h ../include/flow_room.h ../include/house.h \
-  ../include/char_class.h ../include/actions.h ../include/mobact.h \
-  ../include/fight.h
+  /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/spells.h \
+  ../include/screen.h ../include/vehicle.h ../include/materials.h \
+  ../include/flow_room.h ../include/house.h ../include/char_class.h \
+  ../include/actions.h ../include/mobact.h ../include/fight.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/act.cyborg.o: act.cyborg.cc ../include/structs.h ../include/defs.h \
   ../include/macros.h ../include/constants.h ../include/obj_data.h \
@@ -122,11 +123,12 @@ $(OBJ)/act.cyborg.o: act.cyborg.cc ../include/structs.h ../include/defs.h \
   ../include/room_data.h ../include/search.h ../include/weather.h \
   ../include/zone_data.h ../include/ban.h ../include/utils.h \
   ../include/comm.h ../include/handler.h ../include/db.h \
-  /usr/include/pgsql/libpq-fe.h /usr/include/pgsql/postgres_ext.h \
-  ../include/spells.h ../include/screen.h ../include/vehicle.h \
-  ../include/materials.h ../include/char_class.h ../include/actions.h \
-  ../include/mobact.h ../include/guns.h ../include/bomb.h \
-  ../include/fight.h ../include/house.h ../include/accstr.h
+  /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/spells.h \
+  ../include/screen.h ../include/vehicle.h ../include/materials.h \
+  ../include/char_class.h ../include/actions.h ../include/mobact.h \
+  ../include/guns.h ../include/bomb.h ../include/fight.h \
+  ../include/house.h ../include/accstr.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/act.hood.o: act.hood.cc ../include/structs.h ../include/defs.h \
   ../include/macros.h ../include/constants.h ../include/obj_data.h \
@@ -154,11 +156,12 @@ $(OBJ)/act.hood.o: act.hood.cc ../include/structs.h ../include/defs.h \
   ../include/room_data.h ../include/search.h ../include/weather.h \
   ../include/zone_data.h ../include/ban.h ../include/utils.h \
   ../include/comm.h ../include/handler.h ../include/db.h \
-  /usr/include/pgsql/libpq-fe.h /usr/include/pgsql/postgres_ext.h \
-  ../include/spells.h ../include/screen.h ../include/char_class.h \
-  ../include/actions.h ../include/mobact.h ../include/vehicle.h \
-  ../include/materials.h ../include/fight.h ../include/guns.h \
-  ../include/bomb.h ../include/house.h ../include/vendor.h
+  /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/spells.h \
+  ../include/screen.h ../include/char_class.h ../include/actions.h \
+  ../include/mobact.h ../include/vehicle.h ../include/materials.h \
+  ../include/fight.h ../include/guns.h ../include/bomb.h \
+  ../include/house.h ../include/vendor.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/act.knight.o: act.knight.cc ../include/structs.h ../include/defs.h \
   ../include/macros.h ../include/constants.h ../include/obj_data.h \
@@ -186,11 +189,11 @@ $(OBJ)/act.knight.o: act.knight.cc ../include/structs.h ../include/defs.h \
   ../include/room_data.h ../include/search.h ../include/weather.h \
   ../include/zone_data.h ../include/ban.h ../include/utils.h \
   ../include/comm.h ../include/handler.h ../include/db.h \
-  /usr/include/pgsql/libpq-fe.h /usr/include/pgsql/postgres_ext.h \
-  ../include/spells.h ../include/screen.h ../include/vehicle.h \
-  ../include/materials.h ../include/flow_room.h ../include/house.h \
-  ../include/char_class.h ../include/actions.h ../include/mobact.h \
-  ../include/fight.h
+  /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/spells.h \
+  ../include/screen.h ../include/vehicle.h ../include/materials.h \
+  ../include/flow_room.h ../include/house.h ../include/char_class.h \
+  ../include/actions.h ../include/mobact.h ../include/fight.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/act.mage.o: act.mage.cc ../include/structs.h ../include/defs.h \
   ../include/macros.h ../include/constants.h ../include/obj_data.h \
@@ -218,10 +221,11 @@ $(OBJ)/act.mage.o: act.mage.cc ../include/structs.h ../include/defs.h \
   ../include/room_data.h ../include/search.h ../include/weather.h \
   ../include/zone_data.h ../include/ban.h ../include/utils.h \
   ../include/comm.h ../include/handler.h ../include/db.h \
-  /usr/include/pgsql/libpq-fe.h /usr/include/pgsql/postgres_ext.h \
-  ../include/spells.h ../include/screen.h ../include/vehicle.h \
-  ../include/materials.h ../include/flow_room.h ../include/house.h \
-  ../include/char_class.h ../include/actions.h ../include/mobact.h
+  /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/spells.h \
+  ../include/screen.h ../include/vehicle.h ../include/materials.h \
+  ../include/flow_room.h ../include/house.h ../include/char_class.h \
+  ../include/actions.h ../include/mobact.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/act.merc.o: act.merc.cc ../include/structs.h ../include/defs.h \
   ../include/macros.h ../include/constants.h ../include/obj_data.h \
@@ -249,12 +253,12 @@ $(OBJ)/act.merc.o: act.merc.cc ../include/structs.h ../include/defs.h \
   ../include/room_data.h ../include/search.h ../include/weather.h \
   ../include/zone_data.h ../include/ban.h ../include/utils.h \
   ../include/comm.h ../include/handler.h ../include/db.h \
-  /usr/include/pgsql/libpq-fe.h /usr/include/pgsql/postgres_ext.h \
-  ../include/spells.h ../include/screen.h ../include/char_class.h \
-  ../include/actions.h ../include/mobact.h ../include/vehicle.h \
-  ../include/materials.h ../include/fight.h ../include/guns.h \
-  ../include/bomb.h ../include/smokes.h ../include/player_table.h \
-  ../include/vendor.h
+  /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/spells.h \
+  ../include/screen.h ../include/char_class.h ../include/actions.h \
+  ../include/mobact.h ../include/vehicle.h ../include/materials.h \
+  ../include/fight.h ../include/guns.h ../include/bomb.h \
+  ../include/smokes.h ../include/player_table.h ../include/vendor.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/act.monk.o: act.monk.cc ../include/structs.h ../include/defs.h \
   ../include/macros.h ../include/constants.h ../include/obj_data.h \
@@ -282,11 +286,12 @@ $(OBJ)/act.monk.o: act.monk.cc ../include/structs.h ../include/defs.h \
   ../include/room_data.h ../include/search.h ../include/weather.h \
   ../include/zone_data.h ../include/ban.h ../include/utils.h \
   ../include/comm.h ../include/handler.h ../include/db.h \
-  /usr/include/pgsql/libpq-fe.h /usr/include/pgsql/postgres_ext.h \
-  ../include/spells.h ../include/screen.h ../include/vehicle.h \
-  ../include/materials.h ../include/flow_room.h ../include/house.h \
-  ../include/char_class.h ../include/actions.h ../include/mobact.h \
-  ../include/fight.h ../include/vendor.h
+  /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/spells.h \
+  ../include/screen.h ../include/vehicle.h ../include/materials.h \
+  ../include/flow_room.h ../include/house.h ../include/char_class.h \
+  ../include/actions.h ../include/mobact.h ../include/fight.h \
+  ../include/vendor.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/act.physic.o: act.physic.cc ../include/structs.h ../include/defs.h \
   ../include/macros.h ../include/constants.h ../include/obj_data.h \
@@ -314,12 +319,13 @@ $(OBJ)/act.physic.o: act.physic.cc ../include/structs.h ../include/defs.h \
   ../include/room_data.h ../include/search.h ../include/weather.h \
   ../include/zone_data.h ../include/ban.h ../include/utils.h \
   ../include/comm.h ../include/handler.h ../include/db.h \
-  /usr/include/pgsql/libpq-fe.h /usr/include/pgsql/postgres_ext.h \
-  ../include/spells.h ../include/screen.h ../include/vehicle.h \
-  ../include/materials.h ../include/flow_room.h ../include/house.h \
-  ../include/char_class.h ../include/actions.h ../include/mobact.h \
-  ../include/fight.h ../include/bomb.h ../include/specs.h \
-  ../include/vendor.h ../include/security.h
+  /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/spells.h \
+  ../include/screen.h ../include/vehicle.h ../include/materials.h \
+  ../include/flow_room.h ../include/house.h ../include/char_class.h \
+  ../include/actions.h ../include/mobact.h ../include/fight.h \
+  ../include/bomb.h ../include/specs.h ../include/vendor.h \
+  ../include/security.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/act.psionic.o: act.psionic.cc ../include/structs.h ../include/defs.h \
   ../include/macros.h ../include/constants.h ../include/obj_data.h \
@@ -347,10 +353,11 @@ $(OBJ)/act.psionic.o: act.psionic.cc ../include/structs.h ../include/defs.h \
   ../include/room_data.h ../include/search.h ../include/weather.h \
   ../include/zone_data.h ../include/ban.h ../include/utils.h \
   ../include/comm.h ../include/handler.h ../include/db.h \
-  /usr/include/pgsql/libpq-fe.h /usr/include/pgsql/postgres_ext.h \
-  ../include/spells.h ../include/screen.h ../include/char_class.h \
-  ../include/actions.h ../include/mobact.h ../include/vehicle.h \
-  ../include/materials.h ../include/fight.h
+  /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/spells.h \
+  ../include/screen.h ../include/char_class.h ../include/actions.h \
+  ../include/mobact.h ../include/vehicle.h ../include/materials.h \
+  ../include/fight.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/act.ranger.o: act.ranger.cc ../include/structs.h ../include/defs.h \
   ../include/macros.h ../include/constants.h ../include/obj_data.h \
@@ -378,11 +385,12 @@ $(OBJ)/act.ranger.o: act.ranger.cc ../include/structs.h ../include/defs.h \
   ../include/room_data.h ../include/search.h ../include/weather.h \
   ../include/zone_data.h ../include/ban.h ../include/utils.h \
   ../include/comm.h ../include/handler.h ../include/db.h \
-  /usr/include/pgsql/libpq-fe.h /usr/include/pgsql/postgres_ext.h \
-  ../include/spells.h ../include/screen.h ../include/vehicle.h \
-  ../include/materials.h ../include/flow_room.h ../include/house.h \
-  ../include/char_class.h ../include/actions.h ../include/mobact.h \
-  ../include/fight.h ../include/player_table.h
+  /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/spells.h \
+  ../include/screen.h ../include/vehicle.h ../include/materials.h \
+  ../include/flow_room.h ../include/house.h ../include/char_class.h \
+  ../include/actions.h ../include/mobact.h ../include/fight.h \
+  ../include/player_table.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/act.thief.o: act.thief.cc ../include/structs.h ../include/defs.h \
   ../include/macros.h ../include/constants.h ../include/obj_data.h \
@@ -410,11 +418,12 @@ $(OBJ)/act.thief.o: act.thief.cc ../include/structs.h ../include/defs.h \
   ../include/room_data.h ../include/search.h ../include/weather.h \
   ../include/zone_data.h ../include/ban.h ../include/utils.h \
   ../include/comm.h ../include/handler.h ../include/db.h \
-  /usr/include/pgsql/libpq-fe.h /usr/include/pgsql/postgres_ext.h \
-  ../include/spells.h ../include/screen.h ../include/vehicle.h \
-  ../include/materials.h ../include/flow_room.h ../include/house.h \
-  ../include/char_class.h ../include/actions.h ../include/mobact.h \
-  ../include/fight.h ../include/vendor.h
+  /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/spells.h \
+  ../include/screen.h ../include/vehicle.h ../include/materials.h \
+  ../include/flow_room.h ../include/house.h ../include/char_class.h \
+  ../include/actions.h ../include/mobact.h ../include/fight.h \
+  ../include/vendor.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/char_class.o: char_class.cc ../include/structs.h ../include/defs.h \
   ../include/macros.h ../include/constants.h ../include/obj_data.h \
@@ -441,10 +450,11 @@ $(OBJ)/char_class.o: char_class.cc ../include/structs.h ../include/defs.h \
   ../include/account.h ../include/desc_data.h ../include/interpreter.h \
   ../include/room_data.h ../include/search.h ../include/weather.h \
   ../include/zone_data.h ../include/ban.h ../include/db.h \
-  /usr/include/pgsql/libpq-fe.h /usr/include/pgsql/postgres_ext.h \
-  ../include/utils.h ../include/spells.h ../include/char_class.h \
-  ../include/actions.h ../include/mobact.h ../include/comm.h \
-  ../include/vehicle.h ../include/handler.h ../include/security.h \
-  ../include/screen.h ../include/clan.h ../include/player_table.h
+  /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/utils.h \
+  ../include/spells.h ../include/char_class.h ../include/actions.h \
+  ../include/mobact.h ../include/comm.h ../include/vehicle.h \
+  ../include/handler.h ../include/security.h ../include/screen.h \
+  ../include/clan.h ../include/player_table.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 OBJFILES= $(OBJ)/act.barb.o $(OBJ)/act.bard.o $(OBJ)/act.cleric.o $(OBJ)/act.cyborg.o $(OBJ)/act.hood.o $(OBJ)/act.knight.o $(OBJ)/act.mage.o $(OBJ)/act.merc.o $(OBJ)/act.monk.o $(OBJ)/act.physic.o $(OBJ)/act.psionic.o $(OBJ)/act.ranger.o $(OBJ)/act.thief.o $(OBJ)/char_class.o
