--- a/src/combat/Makefile-depend
+++ b/src/combat/Makefile-depend
@@ -24,11 +24,12 @@ $(OBJ)/act.offensive.o: act.offensive.cc ../include/structs.h ../include/defs.h 
   ../include/room_data.h ../include/search.h ../include/weather.h \
   ../include/zone_data.h ../include/ban.h ../include/utils.h \
   ../include/comm.h ../include/handler.h ../include/db.h \
-  /usr/include/pgsql/libpq-fe.h /usr/include/pgsql/postgres_ext.h \
-  ../include/spells.h ../include/screen.h ../include/char_class.h \
-  ../include/actions.h ../include/mobact.h ../include/vehicle.h \
-  ../include/materials.h ../include/fight.h ../include/guns.h \
-  ../include/bomb.h ../include/vendor.h
+  /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/spells.h \
+  ../include/screen.h ../include/char_class.h ../include/actions.h \
+  ../include/mobact.h ../include/vehicle.h ../include/materials.h \
+  ../include/fight.h ../include/guns.h ../include/bomb.h \
+  ../include/vendor.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/combat_messages.o: combat_messages.cc ../include/structs.h \
   ../include/defs.h ../include/macros.h ../include/constants.h \
@@ -57,11 +58,12 @@ $(OBJ)/combat_messages.o: combat_messages.cc ../include/structs.h \
   ../include/room_data.h ../include/search.h ../include/weather.h \
   ../include/zone_data.h ../include/ban.h ../include/utils.h \
   ../include/comm.h ../include/handler.h ../include/db.h \
-  /usr/include/pgsql/libpq-fe.h /usr/include/pgsql/postgres_ext.h \
-  ../include/spells.h ../include/screen.h ../include/char_class.h \
-  ../include/actions.h ../include/mobact.h ../include/vehicle.h \
-  ../include/materials.h ../include/flow_room.h ../include/fight.h \
-  ../include/bomb.h ../include/guns.h ../include/specs.h
+  /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/spells.h \
+  ../include/screen.h ../include/char_class.h ../include/actions.h \
+  ../include/mobact.h ../include/vehicle.h ../include/materials.h \
+  ../include/flow_room.h ../include/fight.h ../include/bomb.h \
+  ../include/guns.h ../include/specs.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/combat_utils.o: combat_utils.cc ../include/structs.h ../include/defs.h \
   ../include/macros.h ../include/constants.h ../include/obj_data.h \
@@ -89,13 +91,13 @@ $(OBJ)/combat_utils.o: combat_utils.cc ../include/structs.h ../include/defs.h \
   ../include/room_data.h ../include/search.h ../include/weather.h \
   ../include/zone_data.h ../include/ban.h ../include/utils.h \
   ../include/comm.h ../include/handler.h ../include/db.h \
-  /usr/include/pgsql/libpq-fe.h /usr/include/pgsql/postgres_ext.h \
-  ../include/spells.h ../include/screen.h ../include/char_class.h \
-  ../include/actions.h ../include/mobact.h ../include/vehicle.h \
-  ../include/materials.h ../include/flow_room.h ../include/fight.h \
-  ../include/bomb.h ../include/guns.h ../include/specs.h \
-  ../include/security.h ../include/house.h ../include/quest.h \
-  ../include/player_table.h
+  /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/spells.h \
+  ../include/screen.h ../include/char_class.h ../include/actions.h \
+  ../include/mobact.h ../include/vehicle.h ../include/materials.h \
+  ../include/flow_room.h ../include/fight.h ../include/bomb.h \
+  ../include/guns.h ../include/specs.h ../include/security.h \
+  ../include/house.h ../include/quest.h ../include/player_table.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/fight.o: fight.cc ../include/structs.h ../include/defs.h \
   ../include/macros.h ../include/constants.h ../include/obj_data.h \
@@ -123,12 +125,12 @@ $(OBJ)/fight.o: fight.cc ../include/structs.h ../include/defs.h \
   ../include/room_data.h ../include/search.h ../include/weather.h \
   ../include/zone_data.h ../include/ban.h ../include/utils.h \
   ../include/comm.h ../include/handler.h ../include/db.h \
-  /usr/include/pgsql/libpq-fe.h /usr/include/pgsql/postgres_ext.h \
-  ../include/spells.h ../include/screen.h ../include/char_class.h \
-  ../include/actions.h ../include/mobact.h ../include/vehicle.h \
-  ../include/materials.h ../include/flow_room.h ../include/fight.h \
-  ../include/bomb.h ../include/guns.h ../include/specs.h \
-  ../include/security.h ../include/quest.h ../include/vendor.h \
-  ../include/prog.h
+  /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/spells.h \
+  ../include/screen.h ../include/char_class.h ../include/actions.h \
+  ../include/mobact.h ../include/vehicle.h ../include/materials.h \
+  ../include/flow_room.h ../include/fight.h ../include/bomb.h \
+  ../include/guns.h ../include/specs.h ../include/security.h \
+  ../include/quest.h ../include/vendor.h ../include/prog.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 OBJFILES= $(OBJ)/act.offensive.o $(OBJ)/combat_messages.o $(OBJ)/combat_utils.o $(OBJ)/fight.o
