--- a/src/objects/Makefile-depend
+++ b/src/objects/Makefile-depend
@@ -23,10 +23,11 @@ $(OBJ)/boards.o: boards.cc ../include/structs.h ../include/defs.h \
   ../include/account.h ../include/desc_data.h ../include/interpreter.h \
   ../include/room_data.h ../include/search.h ../include/weather.h \
   ../include/zone_data.h ../include/ban.h ../include/utils.h \
-  ../include/comm.h ../include/db.h /usr/include/pgsql/libpq-fe.h \
-  /usr/include/pgsql/postgres_ext.h ../include/editor.h ../include/prog.h \
-  ../include/boards.h ../include/handler.h ../include/screen.h \
-  ../include/clan.h ../include/accstr.h ../include/security.h
+  ../include/comm.h ../include/db.h /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/editor.h \
+  ../include/prog.h ../include/boards.h ../include/handler.h \
+  ../include/screen.h ../include/clan.h ../include/accstr.h \
+  ../include/security.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/bomb.o: bomb.cc ../include/structs.h ../include/defs.h \
   ../include/macros.h ../include/constants.h ../include/obj_data.h \
@@ -54,11 +55,12 @@ $(OBJ)/bomb.o: bomb.cc ../include/structs.h ../include/defs.h \
   ../include/room_data.h ../include/search.h ../include/weather.h \
   ../include/zone_data.h ../include/ban.h ../include/utils.h \
   ../include/comm.h ../include/handler.h ../include/db.h \
-  /usr/include/pgsql/libpq-fe.h /usr/include/pgsql/postgres_ext.h \
-  ../include/spells.h ../include/screen.h ../include/vehicle.h \
-  ../include/materials.h ../include/flow_room.h ../include/bomb.h \
-  ../include/fight.h ../include/house.h ../include/char_class.h \
-  ../include/actions.h ../include/mobact.h
+  /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/spells.h \
+  ../include/screen.h ../include/vehicle.h ../include/materials.h \
+  ../include/flow_room.h ../include/bomb.h ../include/fight.h \
+  ../include/house.h ../include/char_class.h ../include/actions.h \
+  ../include/mobact.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/guns.o: guns.cc ../include/structs.h ../include/defs.h \
   ../include/macros.h ../include/constants.h ../include/obj_data.h \
@@ -86,10 +88,11 @@ $(OBJ)/guns.o: guns.cc ../include/structs.h ../include/defs.h \
   ../include/room_data.h ../include/search.h ../include/weather.h \
   ../include/zone_data.h ../include/ban.h ../include/utils.h \
   ../include/comm.h ../include/handler.h ../include/db.h \
-  /usr/include/pgsql/libpq-fe.h /usr/include/pgsql/postgres_ext.h \
-  ../include/spells.h ../include/screen.h ../include/vehicle.h \
-  ../include/materials.h ../include/char_class.h ../include/actions.h \
-  ../include/mobact.h ../include/guns.h
+  /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/spells.h \
+  ../include/screen.h ../include/vehicle.h ../include/materials.h \
+  ../include/char_class.h ../include/actions.h ../include/mobact.h \
+  ../include/guns.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/paths.o: paths.cc ../include/structs.h ../include/defs.h \
   ../include/macros.h ../include/constants.h ../include/obj_data.h \
@@ -116,8 +119,8 @@ $(OBJ)/paths.o: paths.cc ../include/structs.h ../include/defs.h \
   ../include/account.h ../include/desc_data.h ../include/interpreter.h \
   ../include/room_data.h ../include/search.h ../include/weather.h \
   ../include/zone_data.h ../include/ban.h ../include/utils.h \
-  ../include/db.h /usr/include/pgsql/libpq-fe.h \
-  /usr/include/pgsql/postgres_ext.h ../include/vehicle.h \
+  ../include/db.h /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/vehicle.h \
   ../include/handler.h ../include/paths.h ../include/comm.h \
   ../include/screen.h ../include/player_table.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
@@ -147,11 +150,12 @@ $(OBJ)/smokes.o: smokes.cc ../include/structs.h ../include/defs.h \
   ../include/room_data.h ../include/search.h ../include/weather.h \
   ../include/zone_data.h ../include/ban.h ../include/utils.h \
   ../include/comm.h ../include/handler.h ../include/db.h \
-  /usr/include/pgsql/libpq-fe.h /usr/include/pgsql/postgres_ext.h \
-  ../include/spells.h ../include/screen.h ../include/house.h \
-  ../include/vehicle.h ../include/materials.h ../include/smokes.h \
-  ../include/clan.h ../include/char_class.h ../include/actions.h \
-  ../include/mobact.h ../include/bomb.h
+  /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/spells.h \
+  ../include/screen.h ../include/house.h ../include/vehicle.h \
+  ../include/materials.h ../include/smokes.h ../include/clan.h \
+  ../include/char_class.h ../include/actions.h ../include/mobact.h \
+  ../include/bomb.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/vehicle.o: vehicle.cc ../include/structs.h ../include/defs.h \
   ../include/macros.h ../include/constants.h ../include/obj_data.h \
@@ -179,8 +183,9 @@ $(OBJ)/vehicle.o: vehicle.cc ../include/structs.h ../include/defs.h \
   ../include/room_data.h ../include/search.h ../include/weather.h \
   ../include/zone_data.h ../include/ban.h ../include/utils.h \
   ../include/comm.h ../include/handler.h ../include/db.h \
-  /usr/include/pgsql/libpq-fe.h /usr/include/pgsql/postgres_ext.h \
-  ../include/spells.h ../include/screen.h ../include/vehicle.h \
-  ../include/house.h ../include/clan.h
+  /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/spells.h \
+  ../include/screen.h ../include/vehicle.h ../include/house.h \
+  ../include/clan.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 OBJFILES= $(OBJ)/boards.o $(OBJ)/bomb.o $(OBJ)/guns.o $(OBJ)/paths.o $(OBJ)/smokes.o $(OBJ)/vehicle.o
