--- a/src/search/Makefile-depend
+++ b/src/search/Makefile-depend
@@ -24,10 +24,11 @@ $(OBJ)/prog.o: prog.cc ../include/structs.h ../include/defs.h \
   ../include/room_data.h ../include/search.h ../include/weather.h \
   ../include/zone_data.h ../include/ban.h ../include/comm.h \
   ../include/utils.h ../include/handler.h ../include/db.h \
-  /usr/include/pgsql/libpq-fe.h /usr/include/pgsql/postgres_ext.h \
-  ../include/spells.h ../include/screen.h ../include/vehicle.h \
-  ../include/fight.h ../include/security.h ../include/actions.h \
-  ../include/house.h ../include/prog.h ../include/clan.h
+  /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/spells.h \
+  ../include/screen.h ../include/vehicle.h ../include/fight.h \
+  ../include/security.h ../include/actions.h ../include/house.h \
+  ../include/prog.h ../include/clan.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/prog_compile.o: prog_compile.cc ../include/constants.h ../include/comm.h \
   ../include/creature.h ../include/combat_data_list.h \
@@ -82,9 +83,10 @@ $(OBJ)/search.o: search.cc ../include/structs.h ../include/defs.h \
   ../include/room_data.h ../include/search.h ../include/weather.h \
   ../include/zone_data.h ../include/ban.h ../include/comm.h \
   ../include/utils.h ../include/handler.h ../include/db.h \
-  /usr/include/pgsql/libpq-fe.h /usr/include/pgsql/postgres_ext.h \
-  ../include/spells.h ../include/screen.h ../include/vehicle.h \
-  ../include/fight.h ../include/security.h ../include/actions.h \
-  ../include/house.h ../include/prog.h
+  /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/spells.h \
+  ../include/screen.h ../include/vehicle.h ../include/fight.h \
+  ../include/security.h ../include/actions.h ../include/house.h \
+  ../include/prog.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 OBJFILES= $(OBJ)/prog.o $(OBJ)/prog_compile.o $(OBJ)/search.o
