Improved build process
The correct bootstrap script is specified in the dist.  The 'Build'
directory has been added in case you don't want a .o file explosion
in src.  Necessary m4 files have been added, as well as config_nice
from the apache distribution.  An unused file has been removed from
the sources.

--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,6 @@
 AC_PREREQ(2.60)
 AC_INIT([tempusmud], [1.0], [azimuth@tempusmud.com])
+APR_CONFIG_NICE([config.nice])
 AC_CONFIG_SRCDIR([src/clan/clan.cc])
 AC_CONFIG_HEADER([config.h])
 AM_INIT_AUTOMAKE([tempusmud], [1.0])
