Optimization is no longer turned on by default

--- a/configure.in
+++ b/configure.in
@@ -6,6 +6,9 @@ AC_CONFIG_HEADER([config.h])
 AM_INIT_AUTOMAKE([tempusmud], [1.0])
 
 # Checks for programs.
+if test -z "${CXXFLAGS}"; then
+   CXXFLAGS="-g"
+fi
 AC_PROG_CXX
 AC_PROG_CC
 
